--- a/gradle.properties
+++ b/gradle.properties
@@ -19,5 +19,5 @@ org.gradle.jvmargs=-Xmx8g -XX\:MaxPermSize\=1g -XX\:+HeapDumpOnOutOfMemoryError 
 org.gradle.daemon=true
 org.gradle.configureondemand=true
 org.gradle.parallel=true
-android.enableAapt2=false
+android.enableAapt2=true
 
