--- a/settings.gradle
+++ b/settings.gradle
@@ -1,33 +1,33 @@
-include ':LIgnorance',
-        ':FlycoDialog',
-        ':PhotoPicker',
-        ':Ucrop',
-        ':FrescoHelper',
-        ':DragWithFlowLayout',
-        ':EasyRecyclerView',
-        ':FloatingActionButton',
-        ':TopSnackbar',
-        ':LubanCompress',
-        ':ALiYunOSS',
-        ':CBDialog',
-        ':BaseItemLayout',
-        ':StickyHeaderViewPager',
-        ':LCRapidDevelop',
-        ':SearchDialog',
-        ':ObservableScrollView',
-        ':PullToRefreshWithLoadMore',
-        ':SimplifySpan',
-        ':SmoothProgressBar',
-        ':SuspensionIndexBar',
-        ':BigImageViewer',
-        ':ExpandableTextView',
-        ':SlidingUpPanelLayout',
-        ':Transferee',
-        ':SubsamplingScaleImageView',
-        ':FrescoUtils',
-        ':LoadingView',
-        ':MagicIndicator',
-        ':CommonUtils',
-        ':JieCaoVideoPlayer',
-        ':NiceVideoPlayer',
-        ':Vitamio'
+include ':LIgnorance'
+include ':FlycoDialog'
+include ':PhotoPicker'
+include ':Ucrop'
+include ':FrescoHelper'
+include ':DragWithFlowLayout'
+include ':EasyRecyclerView'
+include ':FloatingActionButton'
+include ':TopSnackbar'
+include ':LubanCompress'
+//include ':ALiYunOSS'
+include ':CBDialog'
+include ':BaseItemLayout'
+include ':StickyHeaderViewPager'
+include ':LCRapidDevelop'
+include ':SearchDialog'
+include ':ObservableScrollView'
+include ':PullToRefreshWithLoadMore'
+include ':SimplifySpan'
+include ':SmoothProgressBar'
+include ':SuspensionIndexBar'
+include ':BigImageViewer'
+include ':ExpandableTextView'
+include ':SlidingUpPanelLayout'
+include ':Transferee'
+include ':SubsamplingScaleImageView'
+include ':FrescoUtils'
+include ':LoadingView'
+include ':MagicIndicator'
+include ':CommonUtils'
+include ':JieCaoVideoPlayer'
+include ':NiceVideoPlayer'
+include ':Vitamio'
