--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.1.4'
 
         //ButterKnife
         classpath 'com.jakewharton:butterknife-gradle-plugin:9.0.0-SNAPSHOT'
@@ -40,6 +40,12 @@ allprojects {
         //ButterKnife
         maven {
             url "https://oss.sonatype.org/content/repositories/snapshots"
+        }
+    }
+
+    repositories {
+        flatDir {
+            dirs "$rootDir/libs"
         }
     }
 
