--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Aug 10 09:37:31 CST 2018
-ndk.dir=D\:\\AndroidDevelopment\\sdk\\ndk-bundle
-sdk.dir=D\:\\AndroidDevelopment\\sdk
+#Sat Aug 18 11:15:55 CST 2018
+ndk.dir=E\:\\Development\\DevelopmentApplication\\AndroidSDK\\sdk\\ndk-bundle
+sdk.dir=E\:\\Development\\DevelopmentApplication\\AndroidSDK\\sdk
