--- a/LIgnorance/build.gradle
+++ b/LIgnorance/build.gradle
@@ -354,7 +354,8 @@ dependencies {
     /**
      * 通用的Item布局(左边为不变部分：图标加文字，右边为可变部分：文字、文字加箭头、箭头、开关按钮)
      */
-    implementation project(path: ':BaseItemLayout')
+//    implementation project(path: ':BaseItemLayout')
+    implementation(name: 'BaseItemLayout-2.0.0', ext: 'aar')
     /**
      * 共用头部且滚动中固定导航栏的Viewpager,支持listview,recyclerview,gridview,webview,scrollview.支持下拉刷新
      */
