--- a/settings.gradle
+++ b/settings.gradle
@@ -10,7 +10,7 @@ include ':TopSnackbar'
 include ':LubanCompress'
 //include ':ALiYunOSS'
 include ':CBDialog'
-include ':BaseItemLayout'
+//include ':BaseItemLayout'
 include ':StickyHeaderViewPager'
 include ':LCRapidDevelop'
 include ':SearchDialog'
