--- a/ALiYunOSS/build.gradle
+++ b/ALiYunOSS/build.gradle
@@ -17,6 +17,8 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 23
         versionName "2.3.0"
+
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
