--- a/FrescoUtils/build.gradle
+++ b/FrescoUtils/build.gradle
@@ -17,8 +17,18 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    lintOptions {
+        abortOnError false
+    }
+
+    repositories {
+        flatDir {
+            dirs 'libs'
         }
     }
 }
@@ -36,5 +46,7 @@ dependencies {
     /**
      * 微博和微信加载高清长图却不OOM,双击放大，单击返回，手动放大等，目前只能加载本地
      */
-    implementation project(path: ':SubsamplingScaleImageView')
+//    implementation project(path: ':SubsamplingScaleImageView')
+    implementation(name: 'SubsamplingScaleImageView-1.0', ext: 'aar')
+    implementation "com.android.support:support-annotations:$SUPPORT_VERSION"
 }
