--- a/settings.gradle
+++ b/settings.gradle
@@ -23,7 +23,7 @@ include ':BigImageViewer'
 include ':ExpandableTextView'
 include ':SlidingUpPanelLayout'
 include ':Transferee'
-include ':SubsamplingScaleImageView'
+//include ':SubsamplingScaleImageView'
 include ':FrescoUtils'
 include ':LoadingView'
 include ':MagicIndicator'
