--- a/SubsamplingScaleImageView/build.gradle
+++ b/SubsamplingScaleImageView/build.gradle
@@ -23,6 +23,8 @@ android {
     }
 }
 
+final SUPPORT_VERSION = rootProject.ext.SUPPORT_VERSION
+
 dependencies {
     implementation fileTree(dir: 'libs', include: '*.jar')
     implementation "com.android.support:support-annotations:$SUPPORT_VERSION"
