CBDialog由项目依赖改为aar依赖；

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,7 +9,7 @@ include ':FloatingActionButton'
 include ':TopSnackbar'
 include ':LubanCompress'
 //include ':ALiYunOSS'
-include ':CBDialog'
+//include ':CBDialog'
 //include ':BaseItemLayout'
 include ':StickyHeaderViewPager'
 include ':LCRapidDevelop'
@@ -19,7 +19,7 @@ include ':PullToRefreshWithLoadMore'
 include ':SimplifySpan'
 include ':SmoothProgressBar'
 include ':SuspensionIndexBar'
-include ':BigImageViewer'
+//include ':BigImageViewer'
 include ':ExpandableTextView'
 include ':SlidingUpPanelLayout'
 include ':Transferee'
