--- a/LIgnorance/build.gradle
+++ b/LIgnorance/build.gradle
@@ -228,7 +228,9 @@ dependencies {
     /**
      * 快速创建对话框工具类库,集成了sweet-alert-dialog,Titanic的进度框动画样式,AVLoadingIndicatorView的动画样式
      */
-    implementation project(path: ':CBDialog')
+//    implementation project(path: ':CBDialog')
+    implementation(name: 'CBDialog-1.0', ext: 'aar')
+    implementation 'net.frakbot:jumpingbeans:1.3.0'
     /**
      * 微博和微信加载高清长图却不OOM,双击放大，单击返回，手动放大等，目前只能加载本地
      */
