--- a/settings.gradle
+++ b/settings.gradle
@@ -27,7 +27,7 @@ include ':Transferee'
 include ':FrescoUtils'
 include ':LoadingView'
 include ':MagicIndicator'
-include ':CommonUtils'
+//include ':CommonUtils'
 include ':JieCaoVideoPlayer'
 include ':NiceVideoPlayer'
 include ':Vitamio'
