--- a/CommonUtils/build.gradle
+++ b/CommonUtils/build.gradle
@@ -20,9 +20,14 @@ android {
         }
     }
 
+    lintOptions {
+        abortOnError false
+    }
+
     //so文件加载，需要添加下面代码
     sourceSets.main {
         jni.srcDirs = []
+        jniLibs.srcDirs = []
     }
 }
 
@@ -33,7 +38,6 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    //    compile 'com.android.support:appcompat-v7:25.3.1'
     implementation "com.android.support:appcompat-v7:$SUPPORT_VERSION"
     implementation "com.android.support:design:$SUPPORT_VERSION"
     testImplementation 'junit:junit:4.12'
