--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,7 @@ include ':FlycoDialog'
 include ':PhotoPicker'
 include ':Ucrop'
 include ':FrescoHelper'
-include ':DragWithFlowLayout'
+//include ':DragWithFlowLayout'
 include ':EasyRecyclerView'
 include ':FloatingActionButton'
 include ':TopSnackbar'
