--- a/DragWithFlowLayout/build.gradle
+++ b/DragWithFlowLayout/build.gradle
@@ -15,9 +15,13 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    lintOptions {
+        abortOnError false
     }
 }
 final SUPPORT_VERSION = rootProject.ext.SUPPORT_VERSION
