ExpandableTextView由项目依赖改为aar依赖；

--- a/ExpandableTextView/build.gradle
+++ b/ExpandableTextView/build.gradle
@@ -8,12 +8,19 @@ android {
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion rootProject.ext.targetSdkVersion
+
+        versionCode 100
+        versionName "1.0.0"
     }
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
+    }
+
+    lintOptions {
+        abortOnError false
     }
 }
 
