--- a/settings.gradle
+++ b/settings.gradle
@@ -4,7 +4,7 @@ include ':PhotoPicker'
 include ':Ucrop'
 include ':FrescoHelper'
 //include ':DragWithFlowLayout'
-include ':EasyRecyclerView'
+//include ':EasyRecyclerView'
 include ':FloatingActionButton'
 include ':TopSnackbar'
 include ':LubanCompress'
