--- a/settings.gradle
+++ b/settings.gradle
@@ -20,7 +20,7 @@ include ':SimplifySpan'
 include ':SmoothProgressBar'
 include ':SuspensionIndexBar'
 //include ':BigImageViewer'
-include ':ExpandableTextView'
+//include ':ExpandableTextView'
 include ':SlidingUpPanelLayout'
 include ':Transferee'
 //include ':SubsamplingScaleImageView'
