--- a/settings.gradle
+++ b/settings.gradle
@@ -1,11 +1,11 @@
 include ':LIgnorance'
-include ':FlycoDialog'
+//include ':FlycoDialog'
 include ':PhotoPicker'
 include ':Ucrop'
 include ':FrescoHelper'
 //include ':DragWithFlowLayout'
 //include ':EasyRecyclerView'
-include ':FloatingActionButton'
+//include ':FloatingActionButton'
 include ':TopSnackbar'
 include ':LubanCompress'
 //include ':ALiYunOSS'
