--- a/FlycoDialog/build.gradle
+++ b/FlycoDialog/build.gradle
@@ -15,6 +15,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 final SUPPORT_VERSION = rootProject.ext.SUPPORT_VERSION
