--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,7 @@ include ':LIgnorance'
 //include ':FlycoDialog'
 include ':PhotoPicker'
 include ':Ucrop'
-include ':FrescoHelper'
+//include ':FrescoHelper'
 //include ':DragWithFlowLayout'
 //include ':EasyRecyclerView'
 //include ':FloatingActionButton'
