--- a/settings.gradle
+++ b/settings.gradle
@@ -24,7 +24,7 @@ include ':SuspensionIndexBar'
 include ':SlidingUpPanelLayout'
 include ':Transferee'
 //include ':SubsamplingScaleImageView'
-include ':FrescoUtils'
+//include ':FrescoUtils'
 include ':LoadingView'
 include ':MagicIndicator'
 //include ':CommonUtils'
