--- a/settings.gradle
+++ b/settings.gradle
@@ -28,6 +28,6 @@ include ':Transferee'
 include ':LoadingView'
 include ':MagicIndicator'
 //include ':CommonUtils'
-include ':JieCaoVideoPlayer'
+//include ':JieCaoVideoPlayer'
 include ':NiceVideoPlayer'
 include ':Vitamio'
