--- a/settings.gradle
+++ b/settings.gradle
@@ -12,7 +12,7 @@ include ':LubanCompress'
 //include ':CBDialog'
 //include ':BaseItemLayout'
 include ':StickyHeaderViewPager'
-include ':LCRapidDevelop'
+//include ':LCRapidDevelop'
 include ':SearchDialog'
 include ':ObservableScrollView'
 include ':PullToRefreshWithLoadMore'
