--- a/settings.gradle
+++ b/settings.gradle
@@ -25,7 +25,7 @@ include ':SlidingUpPanelLayout'
 include ':Transferee'
 //include ':SubsamplingScaleImageView'
 //include ':FrescoUtils'
-include ':LoadingView'
+//include ':LoadingView'
 include ':MagicIndicator'
 //include ':CommonUtils'
 //include ':JieCaoVideoPlayer'
