--- a/settings.gradle
+++ b/settings.gradle
@@ -7,7 +7,7 @@ include ':Ucrop'
 //include ':EasyRecyclerView'
 //include ':FloatingActionButton'
 include ':TopSnackbar'
-include ':LubanCompress'
+//include ':LubanCompress'
 //include ':ALiYunOSS'
 //include ':CBDialog'
 //include ':BaseItemLayout'
