--- a/NiceVideoPlayer/build.gradle
+++ b/NiceVideoPlayer/build.gradle
@@ -14,9 +14,12 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    lintOptions {
+        abortOnError false
     }
 }
 
