--- a/settings.gradle
+++ b/settings.gradle
@@ -26,7 +26,7 @@ include ':Transferee'
 //include ':SubsamplingScaleImageView'
 //include ':FrescoUtils'
 //include ':LoadingView'
-include ':MagicIndicator'
+//include ':MagicIndicator'
 //include ':CommonUtils'
 //include ':JieCaoVideoPlayer'
 include ':NiceVideoPlayer'
