--- a/settings.gradle
+++ b/settings.gradle
@@ -29,5 +29,5 @@ include ':Transferee'
 //include ':MagicIndicator'
 //include ':CommonUtils'
 //include ':JieCaoVideoPlayer'
-include ':NiceVideoPlayer'
+//include ':NiceVideoPlayer'
 include ':Vitamio'
