--- a/ObservableScrollView/build.gradle
+++ b/ObservableScrollView/build.gradle
@@ -6,6 +6,8 @@ android {
 
     defaultConfig {
         minSdkVersion 14
+        versionCode 1
+        versionName "1.0"
     }
 
     buildTypes {
