--- a/settings.gradle
+++ b/settings.gradle
@@ -1,33 +1,34 @@
-include ':LIgnorance'
-//include ':FlycoDialog'
-include ':PhotoPicker'
-include ':Ucrop'
-//include ':FrescoHelper'
+//include ':ALiYunOSS'
+//include ':BaseItemLayout'
+//include ':BigImageViewer'
+//include ':CBDialog'
+//include ':CommonUtils'
 //include ':DragWithFlowLayout'
 //include ':EasyRecyclerView'
-//include ':FloatingActionButton'
-include ':TopSnackbar'
-//include ':LubanCompress'
-//include ':ALiYunOSS'
-//include ':CBDialog'
-//include ':BaseItemLayout'
-include ':StickyHeaderViewPager'
-//include ':LCRapidDevelop'
-include ':SearchDialog'
-include ':ObservableScrollView'
-include ':PullToRefreshWithLoadMore'
-include ':SimplifySpan'
-include ':SmoothProgressBar'
-include ':SuspensionIndexBar'
-//include ':BigImageViewer'
 //include ':ExpandableTextView'
-include ':SlidingUpPanelLayout'
-include ':Transferee'
-//include ':SubsamplingScaleImageView'
+//include ':FloatingActionButton'
+//include ':FlycoDialog'
+//include ':FrescoHelper'
 //include ':FrescoUtils'
-//include ':LoadingView'
-//include ':MagicIndicator'
-//include ':CommonUtils'
 //include ':JieCaoVideoPlayer'
+//include ':LCRapidDevelop'
+//include ':LoadingView'
+//include ':LubanCompress'
+include ':LIgnorance'
+//include ':MagicIndicator'
 //include ':NiceVideoPlayer'
+//include ':ObservableScrollView'
+//include ':PhotoPicker'
+//include ':PullToRefreshWithLoadMore'
+include ':SearchDialog'
+include ':SimplifySpan'
+include ':SlidingUpPanelLayout'
+include ':SmoothProgressBar'
+include ':StickyHeaderViewPager'
+//include ':SubsamplingScaleImageView'
+include ':SuspensionIndexBar'
+include ':TopSnackbar'
+include ':Transferee'
+include ':Ucrop'
 include ':Vitamio'
+
