--- a/settings.gradle
+++ b/settings.gradle
@@ -20,15 +20,15 @@ include ':LIgnorance'
 //include ':ObservableScrollView'
 //include ':PhotoPicker'
 //include ':PullToRefreshWithLoadMore'
-include ':SearchDialog'
-include ':SimplifySpan'
-include ':SlidingUpPanelLayout'
-include ':SmoothProgressBar'
-include ':StickyHeaderViewPager'
+//include ':SearchDialog'
+//include ':SimplifySpan'
+//include ':SlidingUpPanelLayout'
+//include ':SmoothProgressBar'
+//include ':StickyHeaderViewPager'
 //include ':SubsamplingScaleImageView'
-include ':SuspensionIndexBar'
-include ':TopSnackbar'
-include ':Transferee'
-include ':Ucrop'
-include ':Vitamio'
+//include ':SuspensionIndexBar'
+//include ':TopSnackbar'
+//include ':Transferee'
+//include ':Ucrop'
+//include ':Vitamio'
 
